force-app/main/default/objects/Extracted_Facts__c/Extracted_Facts__c.object-meta.xml
<CustomObject>
    <label>Extracted Fact</label>
    <pluralLabel>Extracted Facts</pluralLabel>
    <nameField>
        <label>Fact ID</label>
        <type>AutoNumber</type>
        <displayFormat>EF-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Structured data extracted from Evidence documents. Each record is one typed fact (income, employment_date, asset_value, etc.) with a fact_type discriminator. Linked to both Evidence__c (source) and Loan_Application__c (context). Structured fields per fact type — not EAV.</description>
</CustomObject>