force-app/main/default/objects/Extracted_Facts__c/fields/Address_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Address_Tenure_Months__c</fullName>
    <label>Address Tenure Months</label>
    <description>Number of months the borrower has lived at their current address. Used by ADDRESS_TENURE_MIN rule (minimum 12 months). Added per audit requirements reconciliation.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>