force-app/main/default/objects/Extracted_Facts__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Lookup</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Application_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>