force-app/main/default/objects/Extracted_Facts__c/fields/Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Asset_Value__c</fullName>
    <label>Asset Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>