force-app/main/default/objects/Extracted_Facts__c/fields/DTI_Ratio__c.field-meta.xml
<CustomField>
    <fullName>DTI_Ratio__c</fullName>
    <label>DTI Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>