force-app/main/default/objects/Extracted_Facts__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <label>Employer Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>