force-app/main/default/objects/Extracted_Facts__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>Lookup</type>
    <referenceTo>Evidence__c</referenceTo>
    <relationshipLabel>Evidences</relationshipLabel>
    <relationshipName>Evidence_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>