force-app/main/default/objects/Extracted_Facts__c/fields/Extracted_Date__c.field-meta.xml
<CustomField>
    <fullName>Extracted_Date__c</fullName>
    <label>Extracted Date</label>
    <type>DateTime</type>
</CustomField>