force-app/main/default/objects/Extracted_Facts__c/fields/Extraction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Confidence__c</fullName>
    <label>Extraction Confidence</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>