force-app/main/default/objects/Extracted_Facts__c/fields/Fact_Type__c.field-meta.xml
<CustomField>
    <fullName>Fact_Type__c</fullName>
    <label>Fact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>INCOME</fullName><default>true</default><label>INCOME</label></value>
            <value><fullName>EMPLOYMENT</fullName><default>false</default><label>EMPLOYMENT</label></value>
            <value><fullName>ASSET</fullName><default>false</default><label>ASSET</label></value>
            <value><fullName>CREDIT</fullName><default>false</default><label>CREDIT</label></value>
            <value><fullName>IDENTITY</fullName><default>false</default><label>IDENTITY</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>