force-app/main/default/objects/Extracted_Facts__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <label>Monthly Income</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>